maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:58: error: not found: value sol
	sol=getIndication(getX(),getY())
        ^JediEscaper:62: error: not found: value sol
			if (getIndication(getX(),getY())>sol) {
                                                         ^